# jbc

./: CMakeLists.txt  CloudEngine.cpp  CloudEngine.h  FileOperation.cpp  FileOperation.h  README.md  Update.md  VirusTotal.cpp  VirusTotal.h  app.manifest  f-360-cn-chain.pem  main.cpp  my-ca.pem  safe.json  unsafe.json
.github/workflows/: cmake-multi-platform.yml
TestFile/: csaudiosstavs.sys
